update notebooks and demos

--- a/demos/api/kernel_usage.ipynb
+++ b/demos/api/kernel_usage.ipynb
@@ -39,28 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1922cc9a-556c-414e-ade1-be8c517c209b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['cuda', 'opencl']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cle.list_available_backends()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dc4eaf76-f528-4256-a611-02ea3053bb73",
    "metadata": {},
    "outputs": [
@@ -80,8 +59,7 @@
     }
    ],
    "source": [
-    "cle.select_backend(\"opencl\")\n",
-    "cle.select_device(\"TX\")"
+    "cle.select_device()"
    ]
   },
   {
@@ -103,61 +81,6 @@
    ],
    "source": [
     "array = cle.push(np.asarray([1, 2, 3]))\n",
-    "cle.add_image_and_scalar(array, scalar = 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "756943ab",
-   "metadata": {},
-   "source": [
-    "# cuda backend  ( Experimental, not expected to work for now )\n",
-    "One can switch to an experimental [cuda](https://developer.nvidia.com/cuda-toolkit) backend like this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "58651618",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(CUDA) NVIDIA GeForce RTX 2080 SUPER (11.7)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8366 MB"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cle.select_backend(\"cuda\")\n",
-    "cle.select_device(\"TX\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "690dde8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array = cle.push(np.asarray([1, 2, 3], dtype=np.float32))\n",
-    "array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb399ac9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cle.add_image_and_scalar(array, scalar = 5)"
    ]
   }
