--- a/demos/api/memory_management.ipynb
+++ b/demos/api/memory_management.ipynb
@@ -5,27 +5,37 @@
    "id": "cb1fdbe0",
    "metadata": {},
    "source": [
-    "# Tracing memory consumption\n",
-    "When setting up complex workflows, it might male sense to take a look at memory consumption. In interactive environments, the user can use the Windows Task manager to see how busy GPU memory is. That might be cumbersome for scipting. When using an nvidia GPU, the following procedure can be used for workflow memory consumption debugging."
+    "# Optimize memory consumption\n",
+    "\n",
+    "When setting up complex workflows, it make sense to take a look at memory consumption, especially on small device where RAM can be very limited. \n",
+    "Depending on their OSs and device brand, users can track memory consumption of a code or software. Using the Task-Manager on windows, the `nvidia-smi` command for NVIDIA cards, etc. \n",
+    "\n",
+    "pyclesperanto rely on the garbage collector of python and C++ to release memory which become out of scope, hence their is no direct function from the library to call for a data release. Instead, it is possible to rely on the python `del` operation to release a variable and its data.\n",
+    "\n",
+    "This notebook show an example of such memory release."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "01a6ede9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB\n",
-       "\tMaximum Object Size: 2089 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.216.01\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tMaximum Object Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +44,7 @@
     "import numpy as np\n",
     "import pyclesperanto as cle\n",
     "\n",
-    "cle.select_device(\"RTX\")"
+    "cle.select_device(1, device_type=\"gpu\")"
    ]
   },
   {
@@ -42,12 +52,14 @@
    "id": "8a0e81e0",
    "metadata": {},
    "source": [
-    "For overseeing memory consumption, one can use [nvidia-smi](https://nvidia.custhelp.com/app/answers/detail/a_id/3751/~/useful-nvidia-smi-queries), a command line tool that can print out how much memory is currently blocked in a given GPU, by any application:"
+    "For overseeing memory consumption, one can use [nvidia-smi](https://nvidia.custhelp.com/app/answers/detail/a_id/3751/~/useful-nvidia-smi-queries), a command line tool that can print out how much memory is currently blocked in a given GPU, by any application:\n",
+    "\n",
+    "> Two memory are return because, the system running this note book has 2 device, we will focus on the second device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "bedbd481",
    "metadata": {},
    "outputs": [
@@ -56,7 +68,8 @@
      "output_type": "stream",
      "text": [
       "memory.used [MiB]\n",
-      "5709 MiB\n"
+      "2749 MiB\n",
+      "787 MiB\n"
      ]
     }
    ],
@@ -74,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "2f06ebac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = np.random.random((1024, 1024, 100))\n",
+    "image = np.random.random((500, 1024, 1024))\n",
     "\n",
     "blurred = cle.gaussian_blur(image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "f5328a54",
    "metadata": {},
    "outputs": [
@@ -95,7 +108,8 @@
      "output_type": "stream",
      "text": [
       "memory.used [MiB]\n",
-      "6108 MiB\n"
+      "2753 MiB\n",
+      "2787 MiB\n"
      ]
     }
    ],
@@ -113,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "39400e4a",
    "metadata": {},
    "outputs": [],
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "8bef3a3f",
    "metadata": {},
    "outputs": [
@@ -132,7 +146,8 @@
      "output_type": "stream",
      "text": [
       "memory.used [MiB]\n",
-      "5708 MiB\n"
+      "2753 MiB\n",
+      "787 MiB\n"
      ]
     }
    ],
@@ -141,17 +156,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdcd417c",
+   "cell_type": "markdown",
+   "id": "08aaad60",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "We can observe at each call of `nvidia-smi` that the memory of the second device start at `787 MB`, goes to `2787 MB` once we push our data to the device, and goes back to `787 MB` after deleting the Array wiht `del`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d859880e",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
