--- a/demos/basics/test_max_position.ipynb
+++ b/demos/basics/test_max_position.ipynb
@@ -34,8 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 48, 0)\n",
-      "[0, 6, 11]\n"
+      "(np.int64(10), np.int64(48), np.int64(0))\n",
+      "[0.0, 6.0, 11.0]\n"
      ]
     }
    ],
@@ -66,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(89, 2)\n",
-      "[2, 89, 0]\n"
+      "(np.int64(89), np.int64(2))\n",
+      "[2.0, 89.0, 0.0]\n"
      ]
     }
    ],
@@ -98,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20,)\n",
-      "[20, 0, 0]\n"
+      "(np.int64(20),)\n",
+      "[20.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
      "text": [
       "[30 50 20]\n",
       "[1000   20    1]\n",
-      "[10, 20979]\n"
+      "[np.int64(10), np.int64(20979)]\n"
      ]
     }
    ],
@@ -154,74 +154,74 @@
      "output_type": "stream",
      "text": [
       "(5, 8, 3)\n",
-      "[[[3 6 2]\n",
-      "  [5 5 0]\n",
-      "  [5 3 2]\n",
-      "  [7 0 7]\n",
-      "  [9 2 9]\n",
-      "  [6 2 4]\n",
-      "  [9 1 0]\n",
-      "  [9 2 1]]\n",
+      "[[[1 2 5]\n",
+      "  [8 0 4]\n",
+      "  [6 4 1]\n",
+      "  [0 6 5]\n",
+      "  [8 9 0]\n",
+      "  [6 7 8]\n",
+      "  [7 8 8]\n",
+      "  [2 3 3]]\n",
       "\n",
-      " [[2 7 6]\n",
-      "  [6 4 3]\n",
-      "  [3 6 1]\n",
-      "  [6 5 6]\n",
-      "  [8 2 5]\n",
-      "  [5 0 5]\n",
-      "  [9 4 5]\n",
-      "  [8 4 9]]\n",
+      " [[3 4 4]\n",
+      "  [0 4 0]\n",
+      "  [5 3 1]\n",
+      "  [7 2 8]\n",
+      "  [6 1 3]\n",
+      "  [8 9 3]\n",
+      "  [6 5 8]\n",
+      "  [8 3 4]]\n",
       "\n",
-      " [[2 6 5]\n",
-      "  [8 4 1]\n",
-      "  [8 8 3]\n",
-      "  [2 4 6]\n",
-      "  [8 4 1]\n",
-      "  [9 6 1]\n",
-      "  [3 7 5]\n",
-      "  [8 1 7]]\n",
+      " [[7 6 6]\n",
+      "  [3 0 4]\n",
+      "  [8 4 9]\n",
+      "  [4 9 8]\n",
+      "  [3 5 4]\n",
+      "  [5 1 1]\n",
+      "  [0 4 6]\n",
+      "  [4 3 2]]\n",
       "\n",
-      " [[9 7 2]\n",
-      "  [8 8 6]\n",
-      "  [6 3 2]\n",
-      "  [1 1 5]\n",
-      "  [0 4 2]\n",
+      " [[3 5 0]\n",
       "  [2 7 5]\n",
-      "  [4 5 0]\n",
-      "  [7 9 5]]\n",
+      "  [5 5 4]\n",
+      "  [9 4 0]\n",
+      "  [0 0 6]\n",
+      "  [3 6 2]\n",
+      "  [2 9 7]\n",
+      "  [8 8 7]]\n",
       "\n",
-      " [[9 3 2]\n",
-      "  [6 4 6]\n",
-      "  [2 4 7]\n",
-      "  [0 4 1]\n",
-      "  [5 2 8]\n",
-      "  [0 5 7]\n",
-      "  [1 0 2]\n",
-      "  [4 5 1]]]\n",
-      "[[9. 7. 6.]\n",
-      " [8. 8. 6.]\n",
-      " [8. 8. 7.]\n",
-      " [7. 5. 7.]\n",
-      " [9. 4. 9.]\n",
-      " [9. 7. 7.]\n",
-      " [9. 7. 5.]\n",
-      " [9. 9. 9.]]\n",
-      "[[9. 6. 9.]\n",
-      " [9. 7. 9.]\n",
-      " [9. 8. 7.]\n",
-      " [9. 9. 6.]\n",
-      " [9. 5. 8.]\n",
-      " [9. 5. 8.]\n",
-      " [9. 5. 8.]\n",
-      " [9. 5. 8.]]\n",
-      "[[6. 7. 6.]\n",
-      " [5. 6. 8.]\n",
-      " [5. 6. 8.]\n",
-      " [7. 6. 6.]\n",
-      " [9. 8. 8.]\n",
-      " [6. 5. 9.]\n",
-      " [9. 9. 7.]\n",
-      " [9. 9. 8.]]\n"
+      " [[1 2 1]\n",
+      "  [4 4 2]\n",
+      "  [2 6 1]\n",
+      "  [2 4 0]\n",
+      "  [9 1 5]\n",
+      "  [8 5 1]\n",
+      "  [4 6 0]\n",
+      "  [9 1 9]]]\n",
+      "[[7 6 6]\n",
+      " [8 7 5]\n",
+      " [8 6 9]\n",
+      " [9 9 8]\n",
+      " [9 9 6]\n",
+      " [8 9 8]\n",
+      " [7 9 8]\n",
+      " [9 8 9]]\n",
+      "[[8 9 8]\n",
+      " [8 9 8]\n",
+      " [8 9 9]\n",
+      " [9 9 7]\n",
+      " [9 6 9]\n",
+      " [9 6 9]\n",
+      " [9 6 9]\n",
+      " [9 6 9]]\n",
+      "[[5 4 7]\n",
+      " [8 4 4]\n",
+      " [6 5 9]\n",
+      " [6 8 9]\n",
+      " [9 6 5]\n",
+      " [8 9 5]\n",
+      " [8 8 6]\n",
+      " [3 8 4]]\n"
      ]
     }
    ],
@@ -260,23 +260,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 6 4 7 1 8 0 4]\n",
-      " [5 7 8 0 1 2 9 2]\n",
-      " [6 5 0 7 0 5 0 5]\n",
-      " [0 5 3 7 1 4 2 4]\n",
-      " [3 4 0 9 0 3 5 4]\n",
-      " [8 1 9 7 7 5 9 1]]\n",
-      "[[8.]\n",
+      "[[5 4 5 7 7 2 5 0]\n",
+      " [7 8 0 1 2 7 9 3]\n",
+      " [6 6 8 3 5 7 0 8]\n",
+      " [5 1 6 6 4 0 5 8]\n",
+      " [2 0 5 5 0 4 1 5]\n",
+      " [5 6 0 9 0 5 6 8]]\n",
+      "[[7]\n",
+      " [9]\n",
+      " [8]\n",
+      " [8]\n",
+      " [5]\n",
+      " [9]]\n",
+      "[[7.]\n",
       " [9.]\n",
-      " [7.]\n",
-      " [7.]\n",
-      " [9.]\n",
-      " [9.]]\n",
-      "[[8.]\n",
-      " [9.]\n",
-      " [7.]\n",
-      " [7.]\n",
-      " [9.]\n",
+      " [8.]\n",
+      " [8.]\n",
+      " [5.]\n",
       " [9.]]\n"
      ]
     }
@@ -305,13 +305,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8.]\n",
-      " [9.]\n",
-      " [8.]\n",
-      " [8.]\n",
-      " [9.]\n",
-      " [9.]]\n",
-      "[9.]\n"
+      "[[8]\n",
+      " [8]\n",
+      " [6]\n",
+      " [9]\n",
+      " [9]\n",
+      " [9]]\n",
+      "[9]\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2670314/2952837383.py:20: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/tmp/ipykernel_488259/2952837383.py:20: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  z_coord = int(z_pos[y_coord,x_coord])\n"
      ]
     }
@@ -385,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
