--- a/demos/interoperability/numpy.ipynb
+++ b/demos/interoperability/numpy.ipynb
@@ -1,22 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7af5098f",
+   "metadata": {},
+   "source": [
+    "# Numpy interoperability example\n",
+    "\n",
+    "This notebook shows example of interroperability between numpy and pyclesperanto. This does not remove any data transfert from host and device but demonstrate API compatiblity.\n",
+    "\n",
+    "> Thie is WIP, some function will fail and it is normal, sorry for that"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "50b170a2-98e2-4257-b5af-9e008a264a83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB\n",
-       "\tMaximum Object Size: 2089 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.216.01\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tMaximum Object Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,11 +104,11 @@
      "data": {
       "text/html": [
        "<pre>array([[1, 2],\n",
-       "       [3, 4]], mtype=buffer)</pre>"
+       "       [3, 4]], dtype=int32, mtype=buffer)</pre>"
       ],
       "text/plain": [
        "array([[1, 2],\n",
-       "       [3, 4]], mtype=buffer)"
+       "       [3, 4]], dtype=int32, mtype=buffer)"
       ]
      },
      "execution_count": 4,
@@ -115,7 +131,7 @@
      "data": {
       "text/plain": [
        "array([[1, 2],\n",
-       "       [3, 4]])"
+       "       [3, 4]], dtype=int32)"
       ]
      },
      "execution_count": 5,
@@ -243,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.]\n"
+      "[[3.4028235e+38]]\n"
      ]
     }
    ],
@@ -380,17 +396,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>array([3., 4.], dtype=float32, mtype=buffer)</pre>"
-      ],
-      "text/plain": [
-       "array([3., 4.], dtype=float32, mtype=buffer)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'fabs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfabs\u001b[49m(data)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'fabs'"
+     ]
     }
    ],
    "source": [
@@ -404,14 +418,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'fabs'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'fabs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfabs\u001b[49m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'fabs'"
+     ]
     }
    ],
    "source": [
@@ -456,10 +471,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>array([ 9, 16], mtype=buffer)</pre>"
+       "<pre>array([[ 9., 16.]], dtype=float32, mtype=buffer)</pre>"
       ],
       "text/plain": [
-       "array([ 9, 16], mtype=buffer)"
+       "array([[ 9., 16.]], dtype=float32, mtype=buffer)"
       ]
      },
      "execution_count": 19,
@@ -517,17 +532,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>array([3, 2], mtype=buffer)</pre>"
-      ],
-      "text/plain": [
-       "array([3, 2], mtype=buffer)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'cbrt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcbrt\u001b[49m(data)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'cbrt'"
+     ]
     }
    ],
    "source": [
@@ -581,19 +594,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>array([[2, 2],\n",
-       "       [3, 3]], mtype=buffer)</pre>"
-      ],
-      "text/plain": [
-       "array([[2, 2],\n",
-       "       [3, 3]], mtype=buffer)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "got an unexpected keyword argument 'a_min'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclip\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma_min\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma_max\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/data/clesperanto/pyclesperanto/pyclesperanto/_decorators.py:51\u001b[0m, in \u001b[0;36mplugin_function.<locals>.worker_function\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(function)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mworker_function\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     50\u001b[0m     sig \u001b[38;5;241m=\u001b[39m inspect\u001b[38;5;241m.\u001b[39msignature(function)\n\u001b[0;32m---> 51\u001b[0m     bound \u001b[38;5;241m=\u001b[39m \u001b[43msig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m     bound\u001b[38;5;241m.\u001b[39mapply_defaults()\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;66;03m# Get the device to use from the arguments or the input image or the current device\u001b[39;00m\n",
+      "File \u001b[0;32m~/Libraries/miniforge3/envs/skbe/lib/python3.12/inspect.py:3273\u001b[0m, in \u001b[0;36mSignature.bind\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   3268\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbind\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m/\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m   3269\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Get a BoundArguments object, that maps the passed `args`\u001b[39;00m\n\u001b[1;32m   3270\u001b[0m \u001b[38;5;124;03m    and `kwargs` to the function's signature.  Raises `TypeError`\u001b[39;00m\n\u001b[1;32m   3271\u001b[0m \u001b[38;5;124;03m    if the passed arguments can not be bound.\u001b[39;00m\n\u001b[1;32m   3272\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3273\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_bind\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Libraries/miniforge3/envs/skbe/lib/python3.12/inspect.py:3262\u001b[0m, in \u001b[0;36mSignature._bind\u001b[0;34m(self, args, kwargs, partial)\u001b[0m\n\u001b[1;32m   3252\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m   3253\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgot some positional-only arguments passed as \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   3254\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkeyword arguments: \u001b[39m\u001b[38;5;132;01m{arg!r}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3259\u001b[0m             ),\n\u001b[1;32m   3260\u001b[0m         )\n\u001b[1;32m   3261\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 3262\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m   3263\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgot an unexpected keyword argument \u001b[39m\u001b[38;5;132;01m{arg!r}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   3264\u001b[0m                 arg\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(kwargs))))\n\u001b[1;32m   3266\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_bound_arguments_cls(\u001b[38;5;28mself\u001b[39m, arguments)\n",
+      "\u001b[0;31mTypeError\u001b[0m: got an unexpected keyword argument 'a_min'"
+     ]
     }
    ],
    "source": [
@@ -647,17 +659,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>array([0, 1], mtype=buffer)</pre>"
-      ],
-      "text/plain": [
-       "array([0, 1], mtype=buffer)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'mod'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmod\u001b[49m(test, test_div)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'mod'"
+     ]
     }
    ],
    "source": [
@@ -733,15 +743,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pyclesperanto' has no attribute 'array_equal'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cle\u001b[38;5;241m.\u001b[39marray_equal(data1, data2)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'array_equal'"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -750,46 +759,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "febb29b2-9ec5-40dd-ae24-82454bda36e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'array_equiv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray_equiv\u001b[49m(data1, data2)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'array_equiv'"
+     ]
+    }
+   ],
    "source": [
     "cle.array_equiv(data1, data2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ad20a741-07a4-4b65-a5df-8847cc3adc28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array_equiv(data1, data3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "dc4e1523-d648-4782-9e5e-33fc0458b27d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyclesperanto' has no attribute 'array_equiv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray_equiv\u001b[49m(data1, data3)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyclesperanto' has no attribute 'array_equiv'"
+     ]
+    }
+   ],
    "source": [
     "cle.array_equiv(data1, data3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48989cf5-ba9d-46ad-9d1f-1a42ac685dd1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -803,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
