--- a/demos/api/select_devices.ipynb
+++ b/demos/api/select_devices.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "69c32066",
    "metadata": {},
    "outputs": [],
@@ -35,18 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1922cc9a-556c-414e-ade1-be8c517c209b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['NVIDIA GeForce RTX 2080 SUPER',\n",
-       " 'pthread-Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz']"
+       "['AMD Ryzen 9 7950X 16-Core Processor',\n",
+       " 'NVIDIA GeForce RTX 4090',\n",
+       " 'NVIDIA GeForce RTX 4090']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,52 +67,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "dc4eaf76-f528-4256-a611-02ea3053bb73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) pthread-Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz (OpenCL 1.2 pocl HSTR: pthread-x86_64-pc-linux-gnu-skylake-avx512)\n",
-       "\tType: CPU\n",
-       "\tCompute Units: 16\n",
-       "\tGlobal Memory Size: 98765 MB\n",
-       "\tMaximum Object Size: 34359 MB"
+       "(OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
+       "\tVendor:                      Intel(R) Corporation\n",
+       "\tDriver Version:              2024.18.10.0.08_160000\n",
+       "\tDevice Type:                 CPU\n",
+       "\tCompute Units:               32\n",
+       "\tGlobal Memory Size:          127926 MB\n",
+       "\tMaximum Object Size:         63963 MB\n",
+       "\tMax Clock Frequency:         0 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cle.select_device(\"Intel\")"
+    "cle.select_device(\"AMD\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "94bcd15a-7e60-47f8-a54a-de61bd2dac95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB\n",
-       "\tMaximum Object Size: 2089 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.216.01\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24183 MB\n",
+       "\tMaximum Object Size:         6045 MB\n",
+       "\tMax Clock Frequency:         2520 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cle.select_device(\"TX\")"
+    "cle.select_device(\"NVIDIA\")"
    ]
   },
   {
@@ -119,108 +128,96 @@
    "id": "f862b9d5-2243-49ba-b49f-e5d7835392d6",
    "metadata": {},
    "source": [
-    "For each device select, we can see some information about their processing capacities. \n",
-    "Note that the last device selected is the one used further on.\n",
-    "\n",
-    "It is also possible to keep the device information in a variable for more advance usage, like multi-device programming"
+    "However, our system propose two NVIDIA cards, with similar name. In this case, it is better to select the device by its index. \n",
+    "First, I can pre-filter my devices by `type`, here selecting only `GPU` device (e.g. only the NVIDIA cards), then using `device_id=1` return me the second NVIDIA card, the first card being the index `0`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "6f7f61c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.216.01\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tMaximum Object Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cle.select_device(1, device_type=\"gpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f60d14db",
+   "metadata": {},
+   "source": [
+    "A global view of the devices available in the system and information on each devices is available with the function `info`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8db5ab99",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(OpenCL) NVIDIA GeForce RTX 2080 SUPER\n"
+      "0 - (OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
+      "\tVendor:                      Intel(R) Corporation\n",
+      "\tDriver Version:              2024.18.10.0.08_160000\n",
+      "\tDevice Type:                 CPU\n",
+      "\tCompute Units:               32\n",
+      "\tGlobal Memory Size:          127926 MB\n",
+      "\tMaximum Object Size:         63963 MB\n",
+      "\tMax Clock Frequency:         0 MHz\n",
+      "\tImage Support:               Yes\n",
+      "1 - (OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+      "\tVendor:                      NVIDIA Corporation\n",
+      "\tDriver Version:              535.216.01\n",
+      "\tDevice Type:                 GPU\n",
+      "\tCompute Units:               128\n",
+      "\tGlobal Memory Size:          24183 MB\n",
+      "\tMaximum Object Size:         6045 MB\n",
+      "\tMax Clock Frequency:         2520 MHz\n",
+      "\tImage Support:               Yes\n",
+      "2 - (OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+      "\tVendor:                      NVIDIA Corporation\n",
+      "\tDriver Version:              535.216.01\n",
+      "\tDevice Type:                 GPU\n",
+      "\tCompute Units:               128\n",
+      "\tGlobal Memory Size:          24183 MB\n",
+      "\tMaximum Object Size:         6045 MB\n",
+      "\tMax Clock Frequency:         2520 MHz\n",
+      "\tImage Support:               Yes\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "my_device = cle.select_device(\"TX\")\n",
-    "print(my_device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "756943ab",
-   "metadata": {},
-   "source": [
-    "# cuda backend \n",
-    "\n",
-    "You may have notice that in the device name you have the tag `(OpenCL)`. This is an indicator that the device is selected with the backend OpenCL.\n",
-    "This backend was selected by default in this usecase. If we select the CUDA backend, the devices may be different:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "58651618",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NVIDIA GeForce RTX 2080 SUPER']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cle.select_backend(\"cuda\")\n",
-    "cle.list_available_devices()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "887f9d3f-0986-49ff-9183-0b4b86b0fdbd",
-   "metadata": {},
-   "source": [
-    "You can see that the NVIDIA GPU is still visible however the Intel CPU is not. This is because the CUDA backend is not compatible with anything else than NVIDIA GPU cards"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "690dde8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(CUDA) NVIDIA GeForce RTX 2080 SUPER (12.0)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cle.select_device(\"TX\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d25f790d-8cd9-46c0-8b99-522a9e42e54d",
-   "metadata": {},
-   "source": [
-    "If we select now the card, we get the same results, just that now the `(CUDA)` tag is set in the information."
+    "cle.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b1a5bd-2115-40cd-9948-0fc4d48d2a03",
+   "id": "6d8c4060",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -228,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
