--- a/demos/basics/inspecting_3d_images.ipynb
+++ b/demos/basics/inspecting_3d_images.ipynb
@@ -556,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
