--- a/demos/interoperability/napari.ipynb
+++ b/demos/interoperability/napari.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "50b170a2-98e2-4257-b5af-9e008a264a83",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
       "text/plain": [
        "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
        "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              535.183.06\n",
+       "\tDriver Version:              535.216.01\n",
        "\tDevice Type:                 GPU\n",
        "\tCompute Units:               128\n",
        "\tGlobal Memory Size:          24217 MB\n",
@@ -20,7 +20,7 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c5791a69",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "14da0d8e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
